--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-	font-family: 'Rubik', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	color: #6c757d;
 	line-height: 1.6666;
 	font-weight: 400;
@@ -1266,7 +1266,7 @@ h4,
 h5,
 h6 {
 	color: #2f353e;
-	font-family: 'Rubik', sans-serif;
+	font-family: 'Roboto', sans-serif;
 	font-weight: 500;
 	letter-spacing: -0.75px;
 }
@@ -4790,7 +4790,6 @@ p.terms-txt a,
 }
 
 .hero-20-txt h1 {
-	letter-spacing: 0.5px;
 	margin-bottom: 25px;
 }
 
@@ -7366,6 +7365,7 @@ span.release-date span {
 	-moz-border-radius: 16px;
 	-o-border-radius: 16px;
 	border-radius: 16px;
+    height: 210px;
 }
 
 /*------------------------------------------*/
@@ -7385,9 +7385,8 @@ span.release-date span {
 }
 
 #blog-page .blog-post-txt {
-	margin-top: 30px;
-	padding-left: 5%;
-	padding-right: 10%;
+	margin-top: 20px;
+    margin-bottom: 60px;
 }
 
 .blog-post-txt h6,
@@ -7405,6 +7404,10 @@ p.post-tag {
 
 .post-meta p {
 	margin-bottom: 0;
+}
+
+.blog-post-txt a{
+	color: #463853;
 }
 
 /*------------------------------------------*/
@@ -8667,7 +8670,7 @@ p.forgot-password {
 
 .login-separator-txt {
 	position: relative;
-	font-family: 'Rubik', sans-serif;
+	font-family: 'Roboto', sans-serif;
 	font-size: 1.05rem;
 	font-weight: 400;
 }
