--- a/public/fonts/font-rule.css
+++ b/public/fonts/font-rule.css
@@ -3,5 +3,5 @@
 	font-style: normal;
 	font-weight: 300 400 700;
 	font-display: swap;
-	src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+	src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap') format('truetype');
 }
