--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -160,3 +160,9 @@ label > span {
 	font-family: 'Roboto', sans-serif;
 	letter-spacing: -0.75px;
 }
+
+.h1-span {
+	font-size: 1.25rem;
+	font-weight: 400;
+	line-height: 0;
+}
