--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -166,3 +166,18 @@ label > span {
 	font-weight: 400;
 	line-height: 0;
 }
+
+.same-height-image {
+	min-height: 210px;
+	max-height: 210px;
+}
+
+.blog-post-img {
+	height: unset !important;
+}
+
+@media (max-width: 768px) {
+	.same-height-image {
+		max-height: fit-content;
+	}
+}
